heading and paragraph added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Document</title><p>
+    <h1>this is heading</h1>
+    </head>
+    <p>This is a free AI-powered rewrite tool that offers you rephrasing of you articles, sentences, essays, stories, and other creations. Our tool finds the best options for text rewording thanks to Natural Language Processing (NLP) AI software and presents you with a variety of choices.
+
+        We are here to offer you the best free tool to enhance your writing and edit any sentence you need.
+        
+Paraphrase articles, essays, add new words, and ph It doesn’t alter the ideas in your writing but instead adds richness and freshness.
+    </p>
 <body>
     
 </body>
